--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -995,49 +995,60 @@ html, body {
   font-size: 24px;
 }
 
+@media screen and (max-width: 1100px) {
+  /* line 408, ../../assets/compass/sass/views/home.scss */
+  .coffee-cup-background2, .coffee-cup-background {
+    background-position: 0px -100px;
+  }
+}
 @media screen and (max-width: 645px) {
-  /* line 409, ../../assets/compass/sass/views/home.scss */
+  /* line 415, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-left {
     width: 25%;
   }
-  /* line 411, ../../assets/compass/sass/views/home.scss */
+  /* line 417, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-left img {
     margin-left: 20px;
   }
-  /* line 415, ../../assets/compass/sass/views/home.scss */
+  /* line 421, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-right {
     width: 75%;
   }
-  /* line 417, ../../assets/compass/sass/views/home.scss */
+  /* line 423, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-right button {
     margin-right: 20px;
   }
 }
 @media screen and (max-width: 865px) {
-  /* line 426, ../../assets/compass/sass/views/home.scss */
+  /* line 432, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-left {
     width: 25%;
   }
-  /* line 428, ../../assets/compass/sass/views/home.scss */
+  /* line 434, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-left img.wide {
     display: none;
   }
-  /* line 431, ../../assets/compass/sass/views/home.scss */
+  /* line 437, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-left img.narrow {
     display: inline;
   }
-  /* line 435, ../../assets/compass/sass/views/home.scss */
+  /* line 441, ../../assets/compass/sass/views/home.scss */
   .navigation-bar .navigation-bar-right {
     width: 75%;
   }
 
-  /* line 439, ../../assets/compass/sass/views/home.scss */
+  /* line 445, ../../assets/compass/sass/views/home.scss */
   .navigation-bar-small {
     padding-left: 0%;
     padding-right: 0%;
   }
 
-  /* line 444, ../../assets/compass/sass/views/home.scss */
+  /* line 449, ../../assets/compass/sass/views/home.scss */
+  .coffee-cup-background2, .coffee-cup-background {
+    background-position: 0px -25px;
+  }
+
+  /* line 453, ../../assets/compass/sass/views/home.scss */
   .how-it-works2 .rotated-picture img {
     height: 150px;
     margin-top: 50px;
